force-app/main/default/objects/Amenity_Reservation__c/Amenity_Reservation__c.object-meta.xml
<CustomObject>
    <label>Amenity Reservation</label>
    <nameField>
        <label>Amenity Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amenity Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>