force-app/main/default/objects/Amenity_Reservation__c/fields/Amenity__c.field-meta.xml
<CustomField>
    <fullName>Amenity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amenity</label>
    <referenceTo>Amenity__c</referenceTo>
    <relationshipLabel>Amenity</relationshipLabel>
    <relationshipName>Amenity</relationshipName>
    <type>Lookup</type>
</CustomField>