force-app/main/default/objects/Amenity_Reservation__c/fields/AR_Number__c.field-meta.xml
<CustomField>
    <fullName>AR_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Ar Number</label>
    <type>AutoNumber</type>
</CustomField>