force-app/main/default/objects/Amenity_Reservation__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <label>Cancelled Date</label>
    <type>DateTime</type>
</CustomField>