force-app/main/default/objects/Amenity_Reservation__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Community</relationshipLabel>
    <relationshipName>Amenity_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>