force-app/main/default/objects/Amenity_Reservation__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Hr</fullName>
            </value>
            <value>
                <fullName>2 Hrs</fullName>
            </value>
            <value>
                <fullName>3 Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>