force-app/main/default/objects/Amenity_Reservation__c/fields/Food_Beverage__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage__c</fullName>
    <label>Food Beverage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>