force-app/main/default/objects/Amenity_Reservation__c/fields/Music_Preference__c.field-meta.xml
<CustomField>
    <fullName>Music_Preference__c</fullName>
    <label>Music Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>