force-app/main/default/objects/Amenity_Reservation__c/fields/Number_Of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Guests__c</fullName>
    <label>Number Of Guests</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>