force-app/main/default/objects/Amenity_Reservation__c/fields/SAP_Receipt_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>SAP_Receipt_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sap Receipt Confirmed</label>
    <type>Checkbox</type>
</CustomField>