force-app/main/default/objects/Amenity_Reservation__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>